--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -101,6 +101,12 @@
                                 <a class="dropdown-item" href="{% url 'admin_verification_list' %}">
                                     <i class="fas fa-id-card"></i> Verification Requests
                                 </a>
+                                <a class="dropdown-item" href="{% url 'blockchain_explorer' %}">
+                                    <i class="fas fa-link"></i> Blockchain Explorer
+                                </a>
+                                <a class="dropdown-item" href="{% url 'login_logs' %}">
+                                    <i class="fas fa-user-shield"></i> Login Logs
+                                </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/admin/" target="_blank">
                                     <i class="fas fa-tools"></i> Django Admin
